obj/compiler.log
In file included from TestCase_slub.c:6:0:
TestCase_slub.c: In function ‘TestCase_slab_alloc0’:
TestCase_slub.c:43:49: error: ‘ONJ_SIZE’ undeclared (first use in this function)
  inuse_objects = kmem_cache_test->inuse / ALIGN(ONJ_SIZE,9);
                                                 ^
../include/linux/kernel.h:64:43: note: in definition of macro ‘__ALIGN_KERNEL_MASK’
 #define __ALIGN_KERNEL_MASK(x,mask)    (((x) + (mask)) & ~(mask))
                                           ^
../include/linux/kernel.h:67:26: note: in expansion of macro ‘__ALIGN_KERNEL’
 #define ALIGN(x,a)       __ALIGN_KERNEL((x),(a))
                          ^
TestCase_slub.c:43:43: note: in expansion of macro ‘ALIGN’
  inuse_objects = kmem_cache_test->inuse / ALIGN(ONJ_SIZE,9);
                                           ^
TestCase_slub.c:43:49: note: each undeclared identifier is reported only once for each function it appears in
  inuse_objects = kmem_cache_test->inuse / ALIGN(ONJ_SIZE,9);
                                                 ^
../include/linux/kernel.h:64:43: note: in definition of macro ‘__ALIGN_KERNEL_MASK’
 #define __ALIGN_KERNEL_MASK(x,mask)    (((x) + (mask)) & ~(mask))
                                           ^
../include/linux/kernel.h:67:26: note: in expansion of macro ‘__ALIGN_KERNEL’
 #define ALIGN(x,a)       __ALIGN_KERNEL((x),(a))
                          ^
TestCase_slub.c:43:43: note: in expansion of macro ‘ALIGN’
  inuse_objects = kmem_cache_test->inuse / ALIGN(ONJ_SIZE,9);
                                           ^
